cmss/main/default/objects/PensionStrategy__c/PensionStrategy__c.object-meta.xml
<CustomObject>
    <label>Pension Strategy</label>
    <nameField>
        <label>Pension Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pension Strategies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>