cmss/main/default/objects/PensionStrategy__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Pension Strategies</relationshipLabel>
    <relationshipName>PensionStrategies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>