cmss/main/default/objects/PensionStrategy__c/fields/PensionUnitValue__c.field-meta.xml
<CustomField>
    <fullName>PensionUnitValue__c</fullName>
    <label>Pension Unit Value</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>