cmss/main/default/objects/PensionStrategy__c/fields/Share__c.field-meta.xml
<CustomField>
    <fullName>Share__c</fullName>
    <label>Share</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>