cmss/main/default/objects/PensionStrategy__c/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <label>Strategy</label>
    <length>10</length>
    <type>Text</type>
</CustomField>